# ChessBlog

./: db.sqlite3  manage.py  pyproject.toml
Menu/: models.py  urls.py  views.py
Menu/migrations/: 0001_initial.py
Menu/static/css/: style.css
Menu/templates/Menu/: base.html  index.html  menu.html
Menu/templatetags/: draw_menu.py
WorldChess/: asgi.py  settings.py  urls.py  wsgi.py
